Add movie search for session creation. Change method naming